--- a/second_page.html
+++ b/second_page.html
@@ -54,8 +54,10 @@ function getAndDisplayPlaylist() {
         if (playlist) {
             displayPlaylist(playlist);
         } else {
-            alert("No playlists found for the user.");
+            console.error("No playlists found for the user.");
         }
+    }).catch(error => {
+        console.error('Error fetching user playlists:', error);
     });
 }
 
@@ -77,7 +79,7 @@ function getRandomUserPlaylist(accessToken) {
             return null;
         }
     }).catch(error => {
-        console.log('Error fetching user playlists:', error);
+        console.error('Error fetching user playlists:', error);
         return null;
     });
 }
