--- a/second_page.html
+++ b/second_page.html
@@ -106,6 +106,7 @@ function getPlaylistTracks(accessToken, playlistId) {
             "Authorization": "Bearer " + accessToken
         }
     }).then(response => {
+        // Extract tracks from the response
         return response.items;
     }).catch(error => {
         console.error('Error fetching playlist tracks:', error);
